--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,15 @@
   <properties>
     <surefire-plugin.version>2.22.0</surefire-plugin.version>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <kotlin.version>1.3.21</kotlin.version>
     <maven.compiler.source>1.8</maven.compiler.source>
+    <compiler-plugin.version>3.8.1</compiler-plugin.version>
+    <maven.compiler.parameters>true</maven.compiler.parameters>
+    <clojure.version>1.10.1</clojure.version>
+    <kotlin.version>1.3.21</kotlin.version>
+    <scala.version>2.13.1</scala.version>
     <quarkus.version>1.0.0.CR1</quarkus.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <maven.compiler.parameters>true</maven.compiler.parameters>
-    <compiler-plugin.version>3.8.1</compiler-plugin.version>
   </properties>
   <repositories>
     <repository>
@@ -37,7 +39,7 @@
     <dependency>
       <groupId>org.clojure</groupId>
       <artifactId>clojure</artifactId>
-      <version>1.10.1</version>
+      <version>${clojure.version}</version>
     </dependency>
     <dependency>
       <groupId>cheshire</groupId>
@@ -50,11 +52,11 @@
         </exclusion>
       </exclusions>
     </dependency>
-<!--    <dependency>-->
-<!--      <groupId>org.clojure</groupId>-->
-<!--      <artifactId>core.async</artifactId>-->
-<!--      <version>0.4.500</version>-->
-<!--    </dependency>-->
+    <dependency>
+      <groupId>aleph</groupId>
+      <artifactId>aleph</artifactId>
+      <version>0.4.7-alpha4</version>
+    </dependency>
     <dependency>
       <groupId>nrepl</groupId>
       <artifactId>nrepl</artifactId>
@@ -113,7 +115,12 @@
     <dependency>
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-library</artifactId>
-      <version>2.13.1</version>
+      <version>${scala.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-reflect</artifactId>
+      <version>${scala.version}</version>
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
@@ -129,9 +136,43 @@
     <testSourceDirectory>src/test/kotlin</testSourceDirectory>
     <plugins>
       <plugin>
+        <!-- See https://github.com/marcobattaglia/quarkus-scala/blob/master/pom.xml -->
         <groupId>net.alchim31.maven</groupId>
         <artifactId>scala-maven-plugin</artifactId>
         <version>4.3.0</version>
+        <configuration>
+          <scalaVersion>${scala.version}</scalaVersion>
+          <recompileMode>incremental</recompileMode>
+          <args>
+            <arg>-deprecation</arg>
+            <arg>-explaintypes</arg>
+          </args>
+          <!--compilerPlugins>
+            <compilerPlugin>
+              <groupId>org.scalamacros</groupId>
+              <artifactId>paradise_${scala.version}</artifactId>
+              <version>2.1.0</version>
+            </compilerPlugin>
+          </compilerPlugins-->
+        </configuration>
+        <executions>
+          <execution>
+            <id>scala-compile-first</id>
+            <phase>process-sources</phase>
+            <goals>
+              <goal>add-source</goal>
+              <goal>compile</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>scala-test-compile</id>
+            <phase>process-test-resources</phase>
+            <goals>
+              <goal>add-source</goal>
+              <goal>testCompile</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <groupId>io.quarkus</groupId>
@@ -197,6 +238,24 @@
         <artifactId>clojure-maven-plugin</artifactId>
         <version>1.8.3</version>
         <extensions>true</extensions>
+        <executions>
+          <execution>
+            <id>clojure-compile-first</id>
+            <phase>process-sources</phase>
+            <goals>
+              <goal>add-source</goal>
+              <goal>compile</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>clojure-test-compile</id>
+            <phase>process-test-resources</phase>
+            <goals>
+              <goal>add-source</goal>
+              <goal>testCompile</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
