Latest state commit - sorry, no details in the commit comment.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 quarkus.datasource.url=jdbc:postgresql://localhost/default
 quarkus.datasource.driver=org.postgresql.Driver
-quarkus.datasource.username=jaju
-quarkus.datasource.password=jaju
+quarkus.datasource.username=postgres
 quarkus.datasource.min-size=3
 quarkus.datasource.max-size=13
+quarkus.swagger-ui.path=/swagger-ui
+quarkus.swagger-ui.always-include=true
