--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
   <version>0.0.1-SNAPSHOT</version>
   <properties>
     <clojure.version>1.10.1</clojure.version>
-    <surefire-plugin.version>2.22.0</surefire-plugin.version>
+    <surefire-plugin.version>2.22.2</surefire-plugin.version>
     <maven.compiler.target>13</maven.compiler.target>
-    <kotlin.version>1.3.50</kotlin.version>
+    <kotlin.version>1.3.61</kotlin.version>
     <maven.compiler.source>13</maven.compiler.source>
-    <quarkus.version>1.0.0.CR1</quarkus.version>
+    <quarkus.version>1.0.0.Final</quarkus.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <scala.version>2.13.1</scala.version>
     <compiler-plugin.version>3.8.1</compiler-plugin.version>
@@ -50,7 +50,7 @@
     <dependency>
       <groupId>aleph</groupId>
       <artifactId>aleph</artifactId>
-      <version>0.4.7-alpha4</version>
+      <version>0.4.7-alpha5</version>
     </dependency>
     <dependency>
       <groupId>org.clojure</groupId>
@@ -61,11 +61,6 @@
       <groupId>org.clojure</groupId>
       <artifactId>java.data</artifactId>
       <version>0.1.4</version>
-    </dependency>
-    <dependency>
-      <groupId>org.msync</groupId>
-      <artifactId>lucene-clj</artifactId>
-      <version>0.2.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>nrepl</groupId>
@@ -85,7 +80,7 @@
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
       <artifactId>kotlin-stdlib</artifactId>
-      <version>1.3.50</version>
+      <version>${kotlin.version}</version>
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
@@ -105,10 +100,10 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-vertx</artifactId>
     </dependency>
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-flyway</artifactId>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>io.quarkus</groupId>-->
+<!--      <artifactId>quarkus-flyway</artifactId>-->
+<!--    </dependency>-->
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-jdbc-postgresql</artifactId>
@@ -125,10 +120,10 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-kotlin</artifactId>
     </dependency>
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-hibernate-orm-panache</artifactId>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>io.quarkus</groupId>-->
+<!--      <artifactId>quarkus-hibernate-orm-panache</artifactId>-->
+<!--    </dependency>-->
     <dependency>
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-library</artifactId>
@@ -152,10 +147,10 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-reactive-pg-client</artifactId>
     </dependency>
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-smallrye-openapi</artifactId>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>io.quarkus</groupId>-->
+<!--      <artifactId>quarkus-smallrye-openapi</artifactId>-->
+<!--    </dependency>-->
     <dependency>
       <groupId>org.jetbrains.kotlinx</groupId>
       <artifactId>kotlinx-html-jvm</artifactId>
@@ -164,7 +159,7 @@
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
       <artifactId>kotlin-script-runtime</artifactId>
-      <version>1.3.50</version>
+      <version>${kotlin.version}</version>
     </dependency>
   </dependencies>
   <repositories>
@@ -264,7 +259,7 @@
       <plugin>
         <groupId>com.theoryinpractise</groupId>
         <artifactId>clojure-maven-plugin</artifactId>
-        <version>1.8.3</version>
+        <version>1.8.4</version>
         <extensions>true</extensions>
         <executions>
           <execution>
