--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
   <version>0.0.1-SNAPSHOT</version>
   <properties>
     <clojure.version>1.10.1</clojure.version>
-    <surefire-plugin.version>2.22.2</surefire-plugin.version>
+    <surefire-plugin.version>3.0.0-M4</surefire-plugin.version>
     <maven.compiler.target>13</maven.compiler.target>
     <kotlin.version>1.3.61</kotlin.version>
     <maven.compiler.source>13</maven.compiler.source>
-    <quarkus.version>1.0.0.Final</quarkus.version>
+    <quarkus.version>1.1.1.Final</quarkus.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <scala.version>2.13.1</scala.version>
     <compiler-plugin.version>3.8.1</compiler-plugin.version>
@@ -143,10 +143,10 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-scala</artifactId>
     </dependency>
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-reactive-pg-client</artifactId>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>io.quarkus</groupId>-->
+<!--      <artifactId>quarkus-reactive-pg-client</artifactId>-->
+<!--    </dependency>-->
 <!--    <dependency>-->
 <!--      <groupId>io.quarkus</groupId>-->
 <!--      <artifactId>quarkus-smallrye-openapi</artifactId>-->
